<resources>
    <string name="app_name">Ecommerce Concept</string>
    <string name="hello_blank_fragment">Hello fragment</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="product_detail">Product Detail</string>
    <string name="best_seller">Best seller</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="filter_options">Filter options</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>

    <string-array name="brands_phone">
        <item>Samsung</item>
        <item>Apple</item>
        <item>Xiaomi</item>
        <item>Motorola</item>
    </string-array>
</resources>